--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello Coursera</title>
+    <title>Test</title>
 </head>
 <body>
-Hello World again
+This is a test
 </body>
 </html>
